[project]
name = "langgraph-sidekick"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.15.2",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "typing-extensions>=4.15.0",
]
